@@ -14,6 +14,10 @@ This change log contains a list of completed to-do's (new features, bug fixes, r
   version used with Validator, ParserHook::$frame will not be null anymore. Therefore a new
   function ParserHook::renderFunctionObj() is introduced, handling these SFH_OBJECT_ARGS hooks.
 
+* ParserHook constructor now accepts a bitfield for flags to define further customization for
+  registered Hooks. First option can be set via ParserHook::FH_NO_HASH to define that the function
+  hook should be callable without leading hash ("{{plural:...}}"-like style).
+
 * ParserHook Validation messages will now output text in global content language instead of users interface language.
 
 === Validator 0.4.12 ===
